--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.AjudanteDeCostura"
         tools:targetApi="31">
         <activity
+            android:name=".home.pedido.DetalhesPedidoActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".login.CadastroActivity"
             android:exported="false" />
         <activity
