--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 21 18:39:40 BRT 2023
-sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
+#Mon Jan 23 08:11:20 BRT 2023
+sdk.dir=/Users/murielaltmann/Library/Android/sdk
