--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 24 18:55:03 BRT 2023
-sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
+#Wed Jan 25 09:53:20 BRT 2023
+sdk.dir=/Users/murielaltmann/Library/Android/sdk
