--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jan 25 09:53:20 BRT 2023
-sdk.dir=/Users/murielaltmann/Library/Android/sdk
+sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
