Refatoramento de Código e Design no TabLayout
Refatorados clickListeners e utilizamento de lambda nos mesmos, organização de pastas, e tabLayout atualizado mostrando em qual aba está a partir das cores, e mudança no fab da home dependendo de qual tab está

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:name=".socket.InformacoesApp"
         tools:targetApi="31">
         <activity
-            android:name=".home.pedido.DetalhesPedidoActivity"
+            android:name=".home.pedido.CadastroPedidoActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
