--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,12 @@ local.properties
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/file-system.probe
 .idea/deploymentTargetDropDown.xml
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/checksums/checksums.lock
+.gradle/7.4/checksums/sha1-checksums.bin
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/7.4/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/file-system.probe
