--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,9 @@ local.properties
 .gradle/7.4/fileHashes/resourceHashesCache.bin
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/file-system.probe
+*.bin
+*.lock
+.gradle/7.4/checksums/checksums.lock
+.gradle/7.4/checksums/checksums.lock
+*.lock
+*.bin
