--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ android {
 
 dependencies {
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
+
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
