--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,8 @@ local.properties
 *.bin
 *.lock
 .gradle/file-system.probe
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+local.properties
+.gradle/file-system.probe
+*.probe
