Detalhe de Pedido - Tela Finalizada e Com Informações

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".home.pedido.DetalhesPedidoActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".home.pedido.CadastroPedidoActivity"
             android:exported="false">
             <meta-data
