--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.AjudanteDeCostura"
         tools:targetApi="31">
         <activity
-            android:name=".DetalhesPedidoActivity"
+            android:name=".home.PerfilCostureiraActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
