--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Feb 27 08:09:54 BRT 2023
-sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/murielaltmann/Library/Android/sdk
